# ChangeLog for sys-apps/portage
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.00.15444 (23 Feb 2010)

  23 Feb 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15443.ebuild, +portage-2.2.00.15444.ebuild:
  Fix shebang code even more, so it doesn't prevent most merges

*portage-2.2.00.15443 (23 Feb 2010)

  23 Feb 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15320.ebuild, +portage-2.2.00.15443.ebuild:
  New snapshot, including fixes to the auto-shebang-fix-and-detect-problems
  code.

*portage-2.2.00.15431 (22 Feb 2010)

  22 Feb 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15274.ebuild, +portage-2.2.00.15431.ebuild:
  New version, this revision matches 2.2_rc63

*portage-2.2.00.15335 (10 Feb 2010)

  10 Feb 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15210.ebuild, +portage-2.2.00.15335.ebuild:
  New snapshot

*portage-2.2.00.15320 (04 Feb 2010)

  04 Feb 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15200.ebuild, +portage-2.2.00.15320.ebuild:
  New snapshot, fix version comparisons with -r0, bug #303145

*portage-2.2.00.15274 (29 Jan 2010)

  29 Jan 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15187.ebuild, +portage-2.2.00.15274.ebuild:
  New snapshot, this version supports EAPI=3

*portage-2.2.00.15210 (26 Jan 2010)

  26 Jan 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15171.ebuild, +portage-2.2.00.15210.ebuild:
  New snapshot, adds repoman Mercurial (hg) support

*portage-2.2.00.15200 (14 Jan 2010)

  14 Jan 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15134.ebuild, +portage-2.2.00.15200.ebuild:
  Bump, small fix in repoman's bzr support

*portage-2.2.00.15187 (10 Jan 2010)

  10 Jan 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15184.ebuild, +portage-2.2.00.15187.ebuild:
  New snapshot, repoman now has Bazaar (bzr) support

*portage-2.2.00.15184 (09 Jan 2010)
